@@ -3020,9 +3020,11 @@ _followForm(int submit)
 		buf->form_submit = save_submit_formlist(fi);
 	    }
 	}
-	else if ((fi->parent->method == FORM_METHOD_INTERNAL && Strcmp_charp(fi->parent->action, "map") == 0) || Currentbuf->bufferprop & BP_INTERNAL) {	/* internal */
+	else if ((fi->parent->method == FORM_METHOD_INTERNAL &&
+		 (!Strcmp_charp(fi->parent->action, "map") ||
+		  !Strcmp_charp(fi->parent->action, "none"))) ||
+		 Currentbuf->bufferprop & BP_INTERNAL) {	/* internal */
 	    do_internal(tmp2->ptr, tmp->ptr);
-	    return;
 	}
 	else {
 	    disp_err_message("Can't send form because of illegal method.",
